fixed CTA buttons on mobile view, padding and line height

--- a/src/css/phantom-mask.css
+++ b/src/css/phantom-mask.css
@@ -390,8 +390,8 @@ li a{
     a.article--button {
         width: auto !important;
         font-size: 18px !important;
-        line-height: 23px !important;
-        padding: 10px 66px !important;
+        line-height: 30px !important;
+        /*padding: 10px 66px !important;*/
         font-weight: 700 !important;
     }
 
